# ROV-docking

./: .gitignore  README.md
ros2_ws/: test.sdf  test.urdf
ros2_ws/src/Tools/: AddLibraryToMavros.txt  VectorField.py  roblib.py
ros2_ws/src/Tools/CameraCalibration/: calibration.pkl  calibration.py  cameraMatrix.pkl  detection.py  dist.pkl  getImages.py
ros2_ws/src/Tools/CameraCalibration/saves_video/: test_without_detection_1.avi
ros2_ws/src/Tools/MsgTranslator/: MsgTranslator.py  Subsonusdevice_address_see_section.msg  input.txt
ros2_ws/src/Tools/ViewSaveDetectCamera/: 2310_detectionPostProd.py  2410_detectionPostProd_pasmaldeTests.py  ViewSaveDetectCalibrateCamera.py  calibration.pkl  cameraMatrix.pkl  detectionPostProd.py  dist.pkl  testOrientation.py  test_without_detection.avi
ros2_ws/src/bluerov/: CMakeLists.txt  package.xml
ros2_ws/src/bluerov/launch/: bluerov.launch.py
ros2_ws/src/bluerov/src/description/: bluerov.urdf
ros2_ws/src/bluerov_ros_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/bluerov_ros_camera/bluerov_ros_camera/: bluerov_ros_camera.py  test.py
ros2_ws/src/bluerov_ros_camera/launch/: bluerov_ros_camera.launch.py
ros2_ws/src/control/: package.xml  setup.py
ros2_ws/src/control/config/: config.rviz
ros2_ws/src/control/control/: mavlink_node.py
ros2_ws/src/control/launch/: control_launch.py
ros2_ws/src/custom_gazebo_plugin/: CMakeLists.txt  package.xml
ros2_ws/src/custom_gazebo_plugin/include/custom_gazebo_plugin/: my_plugin.hpp
ros2_ws/src/custom_gazebo_plugin/src/: my_plugin.cpp
ros2_ws/src/guidage/: CMakeLists.txt  package.xml
ros2_ws/src/guidage/launch/: main_launch.py
ros2_ws/src/guidage/src/: nodeGuidage.cpp
ros2_ws/src/localisation/: package.xml  setup.py
ros2_ws/src/localisation/launch/: localisation_launch.py
ros2_ws/src/localisation/localisation/: localisation_node.py
ros2_ws/src/mag_calibration/: create_corrected_data.py  ellipsoid_ROV_11_24.txt  ellipsoid_surface_01_22.txt  ellipsoid_surface_11_24.txt  get_calibration_ellipsoid.py  plot_ellipsoid.py  raw_data_magneto_ROV_11_24.txt  raw_data_magneto_ROV_11_24_corrected.txt  raw_data_magneto_surface_01_22.txt  raw_data_magneto_surface_11_24.txt
ros2_ws/src/mnt_fontanilles/: CMakeLists.txt  package.xml
ros2_ws/src/mnt_fontanilles/launch/: mnt_fontanilles.launch.py
ros2_ws/src/mnt_fontanilles/models/mnt_fontanilles/: model.config  model.sdf
ros2_ws/src/mnt_fontanilles/models/mnt_fontanilles/meshes/: Aruco9.mtl  Ensemble.mtl  STRUCTURE_PROFILE.dae  aruco.stl  karstex_fontanilles.stl
ros2_ws/src/mnt_fontanilles/worlds/: fontanilles.world  test.world
ros2_ws/src/my_robot_control/: package.xml  setup.py
ros2_ws/src/my_robot_control/my_robot_control/: my_robot_control.py
ros2_ws/src/nicheVision/: package.xml  setup.cfg  setup.py
ros2_ws/src/nicheVision/launch/: nicheVision.launch.py
ros2_ws/src/nicheVision/nicheVision/: nicheVision.py
ros2_ws/src/python_pkg/: package.xml  setup.py
ros2_ws/src/python_pkg/python_pkg/: nodeWritedata.py
ros2_ws/src/simu_control/: CMakeLists.txt  package.xml
ros2_ws/src/simu_control/include/simu_control/: node_simu_control.hpp
ros2_ws/src/simu_control/src/: node_simu_control.cpp
ros2_ws/src/subsonus_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/subsonus_pkg/launch/: launcher.py  launcher_usbl.py
ros2_ws/src/subsonus_pkg/msg/: Range.msg  SubsonusRawSensorsPacket.msg  SubsonusRemoteTrackPacket.msg  Usblmain.msg
ros2_ws/src/subsonus_pkg/src/: data_dump.h  main.cpp  nodeRawdata_ROV.cpp  nodeRawdata_surface.cpp  nodeTrackPacket.cpp  subsonus_packets.c  subsonus_packets.h
